--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
-        android:name=".VoidApp"
+        android:name="com.void.app.VoidApp"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Void">
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.void.app.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Void"
             android:windowSoftInputMode="adjustResize">
