--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,10 @@ navigation = "2.8.5"
 junit = "5.10.3"
 turbine = "1.1.0"
 truth = "1.4.4"
+firebase-bom = "33.7.0"
+workmanager = "2.9.1"
+unifiedpush = "2.4.0"
+google-services = "4.4.2"
 
 [libraries]
 # Compose
@@ -45,6 +49,7 @@ koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose", versi
 ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
 ktor-client-okhttp = { group = "io.ktor", name = "ktor-client-okhttp", version.ref = "ktor" }
 ktor-client-websockets = { group = "io.ktor", name = "ktor-client-websockets", version.ref = "ktor" }
+ktor-client-content-negotiation = { group = "io.ktor", name = "ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization = { group = "io.ktor", name = "ktor-serialization-kotlinx-json", version.ref = "ktor" }
 
 # Security & Crypto
@@ -71,10 +76,20 @@ junit = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "ju
 turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
 truth = { group = "com.google.truth", name = "truth", version.ref = "truth" }
 
+# Firebase & Push Notifications
+firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase-bom" }
+firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging-ktx" }
+
+# WorkManager
+workmanager-runtime = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workmanager" }
+
+# UnifiedPush (FOSS alternative to FCM)
+unifiedpush = { group = "com.github.UnifiedPush", name = "android-connector", version.ref = "unifiedpush" }
+
 [bundles]
 compose = ["compose-ui", "compose-ui-graphics", "compose-material3", "compose-foundation", "compose-ui-tooling-preview"]
 koin = ["koin-core", "koin-android", "koin-compose"]
-ktor = ["ktor-client-core", "ktor-client-okhttp", "ktor-client-websockets", "ktor-serialization"]
+ktor = ["ktor-client-core", "ktor-client-okhttp", "ktor-client-websockets", "ktor-client-content-negotiation", "ktor-serialization"]
 testing = ["junit", "turbine", "truth", "coroutines-test"]
 
 [plugins]
@@ -84,3 +99,4 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version = "2.0.21-1.0.27" }
+google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
