--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,20 @@ captures/
 
 # Log Files
 *.log
+
+# Documentation (keep in repo but can be ignored if needed)
+# *.md
+
+# Supabase Secrets & Configuration
+supabase/firebase-service-account.json
+supabase/.env
+supabase/.env.local
+supabase/.temp/
+supabase/config.toml
+*-firebase-adminsdk-*.json
+firebase-service-account*.json
+
+# Sensitive Files
+*.pem
+*.key
+*-private-key.json
