--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,12 @@
 [versions]
-kotlin = "2.0.21"
-agp = "8.7.3"
+kotlin = "2.1.0"
+agp = "8.13.2"
 compose-bom = "2024.12.01"
 compose-material3 = "1.3.1"
 compose-compiler = "1.5.15"
 koin = "3.5.6"
-ktor = "2.3.12"
+ktor = "3.2.2"
+supabase = "3.2.6"
 sqlcipher = "4.12.0"
 androidx-sqlite = "2.4.0"
 tink = "1.15.0"
@@ -52,6 +53,10 @@ ktor-client-websockets = { group = "io.ktor", name = "ktor-client-websockets", v
 ktor-client-content-negotiation = { group = "io.ktor", name = "ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization = { group = "io.ktor", name = "ktor-serialization-kotlinx-json", version.ref = "ktor" }
 
+# Supabase
+supabase-postgrest = { group = "io.github.jan-tennert.supabase", name = "postgrest-kt", version.ref = "supabase" }
+supabase-realtime = { group = "io.github.jan-tennert.supabase", name = "realtime-kt", version.ref = "supabase" }
+
 # Security & Crypto
 sqlcipher = { group = "net.zetetic", name = "sqlcipher-android", version.ref = "sqlcipher" }
 androidx-sqlite = { group = "androidx.sqlite", name = "sqlite", version.ref = "androidx-sqlite" }
@@ -90,6 +95,7 @@ unifiedpush = { group = "com.github.UnifiedPush", name = "android-connector", ve
 compose = ["compose-ui", "compose-ui-graphics", "compose-material3", "compose-foundation", "compose-ui-tooling-preview"]
 koin = ["koin-core", "koin-android", "koin-compose"]
 ktor = ["ktor-client-core", "ktor-client-okhttp", "ktor-client-websockets", "ktor-client-content-negotiation", "ktor-serialization"]
+supabase = ["supabase-postgrest", "supabase-realtime"]
 testing = ["junit", "turbine", "truth", "coroutines-test"]
 
 [plugins]
@@ -99,5 +105,5 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-ksp = { id = "com.google.devtools.ksp", version = "2.0.21-1.0.27" }
+ksp = { id = "com.google.devtools.ksp", version = "2.1.0-1.0.29" }
 google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
